force-app/main/default/objects/MatchAccountsPair__c/MatchAccountsPair__c.object-meta.xml
<CustomObject>
    <label>Match Accounts Pair</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Match Accounts Pairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>