force-app/main/default/objects/MatchAccountsPair__c/fields/Acc1_ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>Acc1_ID_ERP__c</fullName>
    <formula>Account1__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account 1 ID in ERP</label>
    <type>Text</type>
</CustomField>