force-app/main/default/objects/MatchAccountsPair__c/fields/Acc1City__c.field-meta.xml
<CustomField>
    <fullName>Acc1City__c</fullName>
    <formula>Account1__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc1 City</label>
    <type>Text</type>
</CustomField>