force-app/main/default/objects/MatchAccountsPair__c/fields/Acc1Country__c.field-meta.xml
<CustomField>
    <fullName>Acc1Country__c</fullName>
    <formula>Account1__r.CountryId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acc1 Country</label>
    <type>Text</type>
</CustomField>