force-app/main/default/objects/MatchAccountsPair__c/fields/Account1__c.field-meta.xml
<CustomField>
    <fullName>Account1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Match Accounts Pairs</relationshipLabel>
    <relationshipName>Account1</relationshipName>
    <type>Lookup</type>
</CustomField>