force-app/main/default/objects/MatchAccountsPair__c/fields/Account1Name__c.field-meta.xml
<CustomField>
    <fullName>Account1Name__c</fullName>
    <formula>Account1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account1Name</label>
    <type>Text</type>
</CustomField>