force-app/main/default/objects/MatchAccountsPair__c/fields/Account2__c.field-meta.xml
<CustomField>
    <fullName>Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Match Accounts Pairs (Account2)</relationshipLabel>
    <relationshipName>Account2</relationshipName>
    <type>Lookup</type>
</CustomField>