force-app/main/default/objects/MatchAccountsPair__c/fields/cosineScore__c.field-meta.xml
<CustomField>
    <fullName>cosineScore__c</fullName>
    <label>cosineScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>