force-app/main/default/objects/MatchAccountsPair__c/fields/diceScore__c.field-meta.xml
<CustomField>
    <fullName>diceScore__c</fullName>
    <label>diceScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>