force-app/main/default/objects/MatchAccountsPair__c/fields/finalScore__c.field-meta.xml
<CustomField>
    <fullName>finalScore__c</fullName>
    <label>finalScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>