force-app/main/default/objects/MatchAccountsPair__c/fields/jaccardScore__c.field-meta.xml
<CustomField>
    <fullName>jaccardScore__c</fullName>
    <label>jaccardScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>