force-app/main/default/objects/MatchAccountsPair__c/fields/levensteinScore__c.field-meta.xml
<CustomField>
    <fullName>levensteinScore__c</fullName>
    <label>levensteinScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>