force-app/main/default/objects/MatchAccountsPair__c/fields/metaphoneScore__c.field-meta.xml
<CustomField>
    <fullName>metaphoneScore__c</fullName>
    <label>metaphoneScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>