force-app/main/default/objects/MatchAccountsPair__c/fields/ScoreVerdict__c.field-meta.xml
<CustomField>
    <fullName>ScoreVerdict__c</fullName>
    <label>Score Verdict</label>
    <length>80</length>
    <type>Text</type>
</CustomField>