force-app/main/default/objects/MatchAccountsPair__c/fields/soundexScore__c.field-meta.xml
<CustomField>
    <fullName>soundexScore__c</fullName>
    <label>soundexScore</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>