force-app/main/default/objects/MatchAccountsPair__c/fields/sourceString__c.field-meta.xml
<CustomField>
    <fullName>sourceString__c</fullName>
    <label>Source String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>